[package]
name = "concurrent-hashmap"
version = "0.2.2"
authors = ["Viktor Dahl <pazaconyoman@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/veddan/rust-concurrent-hashmap.git"
documentation = "https://veddan.github.io/rustdoc/concurrent-hashmap/concurrent_hashmap/index.html"
description = "A concurrent hashmap library."

[dependencies.spin]
branch = "spin_0.4.8"
git = "https://github.com/NoXF/spin-rs"
default-features = false

[dependencies.spin_bitwise]
branch = "spin_0.4.8"
git = "https://github.com/NoXF/spin_bitwise_rs.git"

[features]
unstable = ["spin/asm"]
default = ["unstable"]

[dev-dependencies]
rand = '0.3.11'

[profile.test]
opt-level = 1

[profile.bench]
debug = true
